--- a/src/edm01/email.jade
+++ b/src/edm01/email.jade
@@ -1,4 +1,4 @@
-extends ../core/jade/eatnow/base.jade
+extends ../core/jade/base.jade
 
 block vars
 	- var settings = {baseWidth:580, columnGap:25,contentGap:15, forebgColor:"#f6f6f6"}
