--- a/src/edm01/main.scss
+++ b/src/edm01/main.scss
@@ -1,4 +1,4 @@
-@import "core/scss/standard";
+@import "../core/scss/standard";
 
 .content-text{
 	font-family: arial, sans-serif; 
@@ -12,8 +12,6 @@
 	color: #414042;
 	margin:15px auto;
 }
-
-
 
  @media screen and (max-width : 400px) {
  	
