Cleanup, indentation to spaces

--- a/src/core/scss/_standard.scss
+++ b/src/core/scss/_standard.scss
@@ -16,16 +16,48 @@
 	line-height: 100%;
 }
 
-body, table, td, p, a, li, blockquote{
+body, table, td, tr, span, div, p, a, ul, li, blockquote{
 	-webkit-text-size-adjust:100%;
 	-ms-text-size-adjust:100%;
 }
 
 table, td{
-	mso-table-lspace:0pt; 
-	mso-table-rspace:0pt;
 	border-collapse: collapse;
+  mso-table-lspace: 0pt !important;
+	mso-table-rspace: 0pt !important;
 }
+
+table {
+  border-spacing: 0 !important;
+  border-collapse: collapse !important;
+  
+  margin: 0 auto !important;
+}
+
+
+*[x-apple-data-detectors],
+.x-gmail-data-detectors,
+.x-gmail-data-detectors *,
+.aBn {
+  border-bottom: 0 !important;
+  cursor: default !important;
+  color: inherit !important;
+  text-decoration: none !important;
+  font-size: inherit !important;
+  font-family: inherit !important;
+  font-weight: inherit !important;
+  line-height: inherit !important;
+}
+
+.a6S {
+    display: none !important;
+    opacity: 0.01 !important;
+}
+
+img.g-img + div {
+    display:none !important;
+  }
+
 img{
 	border:0; 
 	line-height:100%; 
@@ -39,18 +71,24 @@ img{
 body[yahoo],
 html{
     background: $body-color;
+    margin: 0 auto !important;
+    padding: 0 !important;
+    height: 100% !important;
+    width: 100% !important;
 }
-
-
-body[yahoo]{
-	width: 100% !important;
-	margin: 0 auto; 
-	padding: 0;
-}
-
 
 body[yahoo] .mobile-visible {
     display: none;
+}
+
+body[yahoo].body {
+  mso-line-height-rule: exactly;
+}
+
+body[yahoo] .center {
+  width: 100%;
+  background: $body-color;
+  text-align: left;
 }
 
 body[yahoo] .backgroundTable{
@@ -64,15 +102,6 @@ body[yahoo] .backgroundTable{
 body[yahoo] .mainTable{
 	margin-left: auto; 
 	margin-right: auto; 
-}
-
-a[x-apple-data-detectors] {
-  color: inherit !important;
-  text-decoration: none !important;
-  font-size: inherit !important;
-  font-family: inherit !important;
-  font-weight: inherit !important;
-  line-height: inherit !important;
 }
 
 //----------------------------------
