--- a/src/core/jade/base.jade
+++ b/src/core/jade/base.jade
@@ -1,44 +1,44 @@
 block vars
-	- var settings = {baseWidth:600, columnGap:25,contentGap:15, forebgColor:"#f6f6f6"}
+  - var settings = {baseWidth:600, columnGap:25,contentGap:15, forebgColor:"#f6f6f6"}
 
 doctype strict
 html(xmlns="http://www.w3.org/1999/xhtml")
-	head
-		meta(http-equiv="Content-Type" content="text/html; charset=utf-8")
-		meta(name="viewport" content="width=device-width, initial-scale=1.0")
-		link(rel="stylesheet" href="main.css")
-		block head
-			title Default title
+  head
+    meta(http-equiv="Content-Type" content="text/html; charset=utf-8")
+    meta(name="viewport" content="width=device-width, initial-scale=1.0")
+    link(rel="stylesheet" href="main.css")
+    block head
+      title Default title
+  body(yahoo="fix", bgcolor="#ffffff").body
+    center.center
+      table(align="center" cellpadding="0" cellspacing="0" border="0" class="backgroundTable" bgcolor="#ffffff")
+        tr
+          td.mobile-hidden(valign="top" align="center" width= settings.baseWidth height= settings.columnGap)
+        tr
+          td(valign="top" align="center")
+            table.content-table.mainTable(width="580" cellpadding="0" cellspacing="0" border="0" align="center")
+              tr
+                td.bodyHeader(valign="top" align="center" style="border-collapse: collapse;" width="580")
+                  //Header starts here
+                  block bodyHeader
 
-	body(yahoo="fix", bgcolor="#ffffff")
-		table(align="center" cellpadding="0" cellspacing="0" border="0" class="backgroundTable" bgcolor="#ffffff")
-			tr
-				td.mobile-hidden(valign="top" align="center" width= settings.baseWidth height= settings.columnGap)
-			tr
-				td(valign="top" align="center")
-					table.content-table.mainTable(width="580" cellpadding="0" cellspacing="0" border="0" align="center")
-						tr
-							td.bodyHeader(valign="top" align="center" style="border-collapse: collapse;" width="580")
-								//Header starts here
-								block bodyHeader
+              tr(bgcolor= "#ffffff")
+                td(valign="top" align="center" width= settings.baseWidth height= settings.columnGap)
+              tr
+                td(valign="top" align="left")
+                  table(cellspacing="0"  cellpadding ="0" bgcolor= settings.forebgColor width= settings.baseWidth)
+                    tr
+                      td.mobile-hidden(width= settings.columnGap)
+                      td(align="left")
+                        //Body starts here
+                        block bodyContent
 
-						tr(bgcolor= "#ffffff")
-							td(valign="top" align="center" width= settings.baseWidth height= settings.columnGap)
-						tr
-							td(valign="top" align="left")
-								table(cellspacing="0"  cellpadding ="0" bgcolor= settings.forebgColor width= settings.baseWidth)
-									tr
-										td.mobile-hidden(width= settings.columnGap)
-										td(align="left")
-											//Body starts here
-											block bodyContent
-
-										td.mobile-hidden(width= settings.columnGap)
-						//- tr(bgcolor= "#ffffff")
-						//- 	td(valign="top" align="center" width= settings.baseWidth height= settings.columnGap)
-						tr
-							td(valign="top" align="left")
-								//Footer starts here
-								block bodyFooter
-			tr
-				td.mobile-hidden(valign="top" align="center" width= settings.baseWidth height= settings.columnGap)
+                      td.mobile-hidden(width= settings.columnGap)
+              //- tr(bgcolor= "#ffffff")
+              //- 	td(valign="top" align="center" width= settings.baseWidth height= settings.columnGap)
+              tr
+                td(valign="top" align="left")
+                  //Footer starts here
+                  block bodyFooter
+        tr
+          td.mobile-hidden(valign="top" align="center" width= settings.baseWidth height= settings.columnGap)
